fixed all the acronyms, think I might be done

--- a/doc/thesis/background.tex
+++ b/doc/thesis/background.tex
@@ -409,16 +409,16 @@ the first two moments, which is the basis for the \ac{UKF}, is not wise.
 \begin{figure}
 \centering
 \includegraphics[trim=6cm .75cm 6cm .75cm,width=16cm]{images/gauss_step_point1sec_3sigma.pdf}
-\caption[Q-Q Plot Of Standard Normal and Result of $0.1$ s BOLD Simulation Output]
-{Q-Q Plot Of Standard Normal and Result of $0.1$ s BOLD Simulation Output. A
+\caption[Q-Q Plot Of Standard Normal and Result of $0.1$ s \ac{BOLD} Simulation Output]
+{Q-Q Plot Of Standard Normal and Result of $0.1$ s \ac{BOLD} Simulation Output. A
 perfect Gaussian would fall on the green line.}
 \label{fig:transp1s}
 \end{figure}
 
 \begin{figure}
 \includegraphics[trim=6cm .75cm 6cm .75cm,width=16cm]{images/gauss_step_1sec_3sigma.pdf}
-\caption[Q-Q Plot Of Standard Normal and Result of $1$ s BOLD Simulation Output]
-{Q-Q Plot Of Standard Normal and Result of $1$ s BOLD Simulation Output. A
+\caption[Q-Q Plot Of Standard Normal and Result of $1$ s \ac{BOLD} Simulation Output]
+{Q-Q Plot Of Standard Normal and Result of $1$ s \ac{BOLD} Simulation Output. A
 perfect Gaussian would fall on the green line.}
 \label{fig:trans1s}
 \end{figure}
