--- a/doc/thesis/discussion.tex
+++ b/doc/thesis/discussion.tex
@@ -223,7 +223,7 @@ If, for instance, it becomes possible to measure $v$ in vivo that data
 could instantly be added to the model to improve regression. Data can
 also be retrieved from the model. \ac{BOLD} parameter distributions could
 for the first time be used as diagnosis tools. In the past the fact
-that the BOLD model is ill-posed would have prevented such research. 
+that the \ac{BOLD} model is ill-posed would have prevented such research. 
 However, now that a full
 distribution is available, comparing parameter estimates is actually
 feasible.
