--- a/doc/thesis/thesis.tex
+++ b/doc/thesis/thesis.tex
@@ -206,8 +206,10 @@ List of Acronyms
 \acro{HRF}{Hemodynamic Response Function}
 \acro{Hb}{Hemoglobin}
 \acro{MAD}{Median Absolute Deviation}
+\acro{MI}{Mutual Information}
 \acro{MR}{Magnetic Resonance}
 \acro{MRI}{Magnetic Resonance Imaging}
+\acro{MSE}{Mean Squared Error}
 \acro{O2Hb}{Oxygenated Hemoglobin}
 \acro{ODE}{Ordinary Differential Equation}
 \acro{PDF}{Probability Density Function}
@@ -227,7 +229,7 @@ List of Acronyms
 
 \pagenumbering{arabic}
 \pagestyle{myheadings}
-
+\acresetall
 \include{intro}
 \include{background}
 \include{particlefilters}
