--- a/doc/thesis/intro.tex
+++ b/doc/thesis/intro.tex
@@ -122,7 +122,7 @@ person, scanner and run.
 \begin{figure}
 \centering
 \includegraphics[width=.5\textwidth]{images/bold}
-\caption[Diagram of BOLD Signal]{A) End of Pre-Stimulus Undershoot, $< 2s$ typical,
+\caption[Diagram of \ac{BOLD} Signal]{A) End of Pre-Stimulus Undershoot, $< 2s$ typical,
 B) End of Stimulus, C) Input Bloodflow Drops from Supernormal to Subnormal,
 $5 s$ after B typical, D) Beginning of Post-stimulus Undershoot, $12 s$ after B
 typical, E) Full return to normal, between $20-30s$ after B. \cite{Behzadi2005}}
