fixed one graph and added the pdf

--- a/doc/thesis/resultsB.tex
+++ b/doc/thesis/resultsB.tex
@@ -336,8 +336,9 @@ maps had more coherency, and had less error in slice simulations (\autoref{fig:s
 
 \begin{figure}
 \centering
-\includegraphics[clip=truew,trim=8cm 4cm 8cm 4cm,width=16cm]{images/realhist}
-\caption{Histogram of parameters in active regions (\acs{MI} $> .15$).}
+\includegraphics[clip=true,trim=6cm 1cm 5cm 1cm,width=\textwidth]{images/realhist}
+\caption{Histogram of parameters in active regions (\acs{MI} $> .15$) overlayed
+with the parameter estimates from Friston et al. \cite{Friston2002b}}
 \label{fig:realhist}
 \end{figure}
 
